<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintCircleRadius="10dp">

    <ImageButton
        android:id="@+id/minimizeButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/minimize_button_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/minimize_ic" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="80dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/album_art_description"
        app:layout_constraintCircleRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@drawable/mirrors" />

    <TextView
        android:id="@+id/maximizedSongName"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/song_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/artist_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maximizedSongName" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="604dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/player"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/maxPreviousButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="24dp"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/previous_button_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shuffleButton"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/previous_ic" />

        <ImageButton
            android:id="@+id/maxPlayButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/play_button_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/maxNextButton"
            app:layout_constraintStart_toEndOf="@+id/maxPreviousButton"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/play_ic" />

        <ImageButton
            android:id="@+id/maxNextButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/next_button_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/maxMusicList"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/next_ic" />

        <ImageButton
            android:id="@+id/shuffleButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/shuffle_button_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/shuffle_ic" />

        <ImageButton
            android:id="@+id/maxMusicList"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/music_list_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/music_list_ic" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>